website/docs/v0.17.0/en/guide/troubleshooting.mdx
---
title: Troubleshooting
description: Use error scope, session state, page revision, and evidence to decide whether to change product code, test specification, driver configuration, or infrastructure.
---

:::warning Release candidate
v0.17.0 is staged on main but not published. Installation examples remain pinned to v0.16.2 until the release gate is intentionally advanced.
:::

# Troubleshooting

A3S Test records specification admission, surface drivers, product assertions, session lifecycle, and repair state separately. Establish which boundary failed before changing business code. A red result proves that one boundary did not hold, but does not by itself prove a product defect.

## Retain these five facts first

1. The complete command and process exit code.
2. The stable error code and `message` from JSON output.
3. The current session or run identifier.
4. The latest `observation_id`, page URL, and Test Kit revision.
5. The smallest screenshot, accessibility tree, console, and page-error set that proves the problem.

Do not copy cookies, authorization headers, browser storage, production data, or provider credentials. Evidence may contain user input, so inspect redaction before sharing it.

## Assign ownership by error scope

| Error scope             | What it normally means                                         | Inspect first                                                                        |
| ----------------------- | -------------------------------------------------------------- | ------------------------------------------------------------------------------------ |
| `test.spec.*`           | ACL, target, configuration, or artifact path failed admission  | Suite fields, action type, target, origin, and relative path                         |
| `test.driver.web.*`     | Web adapter, browser protocol, origin, or lifecycle problem    | Adapter version, executable, page navigation, and startup log                        |
| `test.driver.gui.*`     | GUI profile, permission, window identity, or CUA session       | Platform certification, app identity, accessibility permission, and exclusive worker |
| `test.driver.tui.*`     | PTY, ConPTY, or terminal semantics                             | Command manifest, process tree, encoding, terminal size, and recording path          |
| `test.assert.*`         | Current product state does not satisfy an explicit expectation | Actual page, stale expectation, match target, and assertion evidence                 |
| `test.run.*`            | Deadline, cancellation, scheduling, or cleanup                 | Timeout, worker health, cancellation event, and owned cleanup                        |
| `test.session.repair_*` | Finding, attempt, lease, or verification state problem         | Repair Ledger, request ID, attempt ID, and latest ready revision                     |
| Provider protocol error | Identity, digest, budget, provenance, or response mismatch     | ACL config, response schema, source or screenshot digest, and provider log           |

When JSON output contains both a root failure and a cleanup failure, retain both. A cleanup failure does not erase the product failure, and an assertion failure cannot hide incomplete cleanup.

## A session cannot start

Read the installed version and protocol first.

```bash
a3s-test --version
a3s-test agent schema
a3s-test capabilities --json
```

When `agent schema` succeeds but `capabilities` returns `test.driver.web.version_unsupported`, the CLI is operational and the selected Web adapter is outside its supported protocol range. Upgrade or select an adapter that matches this CLI. Do not bypass the version gate or treat adapter help output as a successful probe.

Declare a compatible standalone adapter and executable explicitly when needed.

```bash
A3S_TEST_AGENT_BROWSER="$(command -v agent-browser)" \
  a3s-test agent start http://127.0.0.1:3000 \
  --session smoke \
  --goal "Open the page" \
  --success "The main heading is visible" \
  --browser-driver standalone \
  --json
```

If startup still fails, check that the URL is listening, the adapter is executable, and headless-browser dependencies are installed. Never kill all Chrome or browser processes by name.

## The observation is empty or the page is not ready

Inspect persisted state, then capture a complete observation.

```bash
a3s-test agent show --session smoke --json
a3s-test agent observe --session smoke --json
```

Check these facts in order.

- The current URL still belongs to the session's exact-origin set.
- The page is not parked on an authentication redirect, error page, or unapproved port.
- The target is in the main document or a frame the driver can access.
- The host page exposes native semantics or an ARIA name.
- Test Kit `page.ready` and the relevant component `ready` values are `true`.

Bind waits to observable conditions.

```json
{
  "type": "wait",
  "condition": {
    "type": "text",
    "value": "Order confirmation"
  }
}
```

Do not add infinite polling or an arbitrary long sleep. If the page never becomes ready, repair the host readiness signal or the success condition.

## A hidden assertion or disappearance wait fails

Read the exact error before changing the locator.

| Result                             | Meaning                                                              | Inspect next                                                       |
| ---------------------------------- | -------------------------------------------------------------------- | ------------------------------------------------------------------ |
| Passed with `visible = false`      | No visible match existed at that observation                         | Add stability only if the state must remain hidden                 |
| `test.assert.hidden`               | The positive probe found a visible match                             | `output.data.probe`, target semantics, CSS, and transition state   |
| `test.assert.unstable`             | The target was initially hidden and became visible at a later sample | `assertion.first`, `assertion.last`, sample timing, and rollback   |
| `test.spec.hidden_target_unstable` | ACL used `ref()` or `visual_point()`                                 | Replace observation-bound identity with a semantic or CSS target   |
| `test.driver.*`                    | The adapter could not establish visibility                           | Target support, stale/ambiguous state, driver output, and logs     |
| `test.run.assertion_mode_invalid`  | Programmatic construction bypassed the ACL admission invariant       | Construct hidden mode only around `Assert(Visible(stable target))` |
| `test.run.wait_mode_invalid`       | Programmatic hidden wait used an invalid action, policy, or target   | Use `Wait(Visible(stable target))` without assertion stability     |
| `test.run.hidden_wait_probe_limit` | The target stayed visible through all 1,201 bounded probes           | Product transition, locator scope, and scenario-level readiness    |
| `test.run.timeout` with wait data  | The target was still visible when the scenario deadline expired      | `last_visible`, preceding step time, and the declared deadline     |

`expect hidden` means “no visible match now.” Use `wait hidden` when the product transition itself must remove or hide the target. Its `output.data.wait` reports `matched`, `timed_out`, `cancelled`, `probe_limit`, or `inconclusive`, together with probe count and elapsed time. Use `stable_for_ms` only when the requirement is that the target remain hidden after the first successful hidden probe.

Do not replace a semantic locator with a snapshot ref. A missing ref can mean stale observation state, which is intentionally not accepted as proof that the product element is gone. Do not suppress `test.driver.*`; an invalid selector, ambiguous GUI match, malformed browser response, or lost surface leaves visibility unknown.

## A stable expectation fails or times out

Start with the step error and do not tune the interval before assigning ownership.

| Result                   | What it proves                                             | Inspect next                                                                     |
| ------------------------ | ---------------------------------------------------------- | -------------------------------------------------------------------------------- |
| Original `test.assert.*` | The first sample was false, so no stability window started | Target, product readiness, and the expectation itself                            |
| `test.assert.unstable`   | The first sample passed and a later sample was false       | First/last assertion data, sample count, visible flicker, hydration, or rollback |
| `test.driver.*`          | The driver could not complete a sample                     | Adapter log, command deadline, target support, and browser lifecycle             |
| `test.run.timeout`       | The scenario deadline ended during the window or a sample  | Total scenario budget, preceding steps, driver latency, and retries              |
| `test.run.cancelled`     | Cancellation interrupted an interval or sample             | The cancellation source and cleanup result                                       |

For `test.assert.unstable`, read `output.data.stability` and compare `observed_ms` with `required_ms`. `samples` counts completed observation points. Step `attempts` counts every driver call and can be larger when infrastructure retries are enabled. `assertion.last` may be `null` when the failing driver command returned an error without data.

Calibrate in this order.

1. Put a typed `wait` before the assertion if the test first needs to reach a ready state.
2. Set `stable_for_ms` to the product-relevant settling period, not the longest time CI can tolerate.
3. Set `sample_interval_ms` no larger than the shortest transient the test needs a reasonable chance to observe.
4. Budget the scenario deadline for preceding work, the full window, command latency, and retry backoff.
5. Prefer a semantic target that can be resolved on every render; do not carry a stale observation ref through DOM replacement.

Do not increase the interval merely to make a flicker disappear from samples. That reduces time resolution and can hide the defect. Do not add a sleep after the expectation; it creates no assertion evidence. Sampling remains discrete and cannot prove the state between observation points.

## A ref is stale or the target is rejected

`@eN` and `@cN` are valid only in the latest observation that created them. Navigation, DOM changes, scrolling, viewport changes, focus, and browser-context switches can advance the revision.

```bash
a3s-test agent observe --session smoke --interactive --json
a3s-test agent click @e3 \
  --session smoke \
  --observation 8 \
  --json
```

Observe again and resolve the target again after a stale-ref error. Do not rewrite an old observation ID or move old coordinates into a CSS target.

`@uN` is permanently read-only. It can connect style, layout, or motion evidence but cannot target click, fill, drag, or an ACL action. Find a current `@eN`, a uniquely actionable `@cN`, or a stable semantic locator for the same node.

## The page left an admitted origin

`--allow-origin` controls the exact scheme, host, and port that may be navigated and observed. `--allow-domain` permits network access to a hostname and does not expand action origins.

A3S Test stops issuing refs after the page moves to an unapproved origin. Confirm whether the redirect belongs to the test. Start a new session with an exact `--allow-origin` when it does. Retain origin-loss evidence and end the session when it does not.

Do not continue acting on an unknown page. `http://127.0.0.1:3000` and `http://localhost:3000` are different origins.

## The Test Kit bridge is unavailable

Browser accessibility still works without a bridge, but component ownership, source hints, and `@cN` will be absent. Check these points in order.

1. `enabled` is strictly `true`.
2. The React app mounts `A3STestKit` on the client.
3. The page did not mount only `A3SReviewOverlay` without the Context Runtime.
4. The current frame is same-origin and accessible to the bridge.
5. Hot reload did not leave multiple providers replacing each other.

Use a read-only bridge probe in the browser console.

```ts
import { getPageContextBridge } from '@a3s-lab/testkit';

const bridge = getPageContextBridge();
console.log(bridge?.probe());
```

A production build with the overlay disabled is normal. CI can retain `A3STestKit` while omitting the visible review surface.

## Page Context is truncated

The response fields `truncated`, `nextCursor`, and `ui.budget` identify the budget that ran out. Respond in this order.

1. Narrow the scope to a component, node, or region.
2. Use summary or scoped detail for routine targeting.
3. Reserve forensic detail for repair verification and design review.
4. Read the next page with the returned opaque cursor.
5. Confirm that the request does not try to increase installation ceilings.

The outer Page Context may remain valid when an incomplete UI graph is omitted. Mark the missing UI evidence as uncertain. Never fabricate layout nodes or edges to fill the gap.

## Review Overlay does not appear

Check `A3SReviewOverlay` `enabled`, the outer provider, page `<html lang>`, and the Shadow DOM host. The overlay mounts only when a live bridge exists. Its default surface is one side panel with peer New feedback, Findings, and Preferences views; selecting a target replaces the marking tools with the editor in that same panel.

When keyboard tools do not respond, confirm that focus is outside text fields and editors. Letter shortcuts deliberately yield to editable controls. On mobile, check whether the host uses a full-screen layer with a z-index above the Test Kit panel.

## A finding does not enter the repair queue

Separate draft state from submission. Saving a local draft, copying Markdown, and opening advice do not enter the Repair Ledger.

```bash
a3s-test agent repair-watch \
  --session smoke \
  --limit 20 \
  --timeout-ms 30000 \
  --json
```

Without `repairEndpoint`, the active browser session drains the bridge queue. With an endpoint, a failed same-origin POST does not delete the browser queue. Check protocol, content type, body limit, and route ownership, then retry from the same session.

Conflicting or overlapping findings may enter `needs_input`. Read the Repair Ledger and thread messages, ask a person to clarify, then requeue. Do not bypass the conflict by starting another workspace-mutating agent.

## Editing finished but verification cannot pass

`repair-complete` ends only the editing phase. `repair-verify` still requires a newer ready page revision, a re-resolved target, success criteria, before-and-after browser-error baselines, and focused checks.

| Symptom                           | Response                                                                                                                  |
| --------------------------------- | ------------------------------------------------------------------------------------------------------------------------- |
| `repair_verify_not_ready`         | Let the app finish a new render, then run one bounded verification                                                        |
| Target cannot be found            | Check semantic locators, replacement target, and source hints without reusing private node IDs                            |
| Console or page errors increased  | Repair the new errors and re-enter verification                                                                           |
| Success criteria cannot be proven | Add an observable condition or let a person handle the unverifiable portion                                               |
| Layout Mode proves only existence | Add original-region, destination-region, or intersection evidence                                                         |
| ACL candidate fails admission     | Repair syntax, origin, read-only actions, and assertions without writing the failed candidate into the product repository |

A failed verification never auto-resolves. Explicit `--auto-resolve-repairs` still persists a passing `review_ready` event first.

## A provider request fails

Visual grounding, design audit, and contract generation use separate protocols. Check provider and model identity, endpoint, authorization environment variable, deadline, cost, request bytes, candidate count, and response schema.

A3S Test rejects a response when a source file or screenshot changes during the request. Generate a fresh observation or draft instead of reusing an old digest. When the page revision changes after a provider returns geometry, observe and request again instead of converting those coordinates into a current click.

## Cleanup did not complete

Stop dispatching actions, then finish or abort the exact session.

```bash
a3s-test agent abort --session smoke --json
```

The first `Ctrl+C` requests bounded cancellation and cleanup. A second signal terminates only process groups owned by the current run. A cleanup failure retains the session so the same caller can retry, while observation and action remain blocked.

Never run a global kill by browser or application name. It can close a user's existing sessions and remove the state A3S Test needs for terminal reporting and evidence.

## Share a minimal diagnostic bundle

An inspectable bundle normally needs only these files.

```text
command.txt
result.json
session.json
events.jsonl
report.json
artifacts/
├── screenshots/failure.png
├── evidence/accessibility.json
├── evidence/console.json
└── evidence/page-errors.json
```

Add HAR, trace, or video only when the failure concerns network or timing. Remove credentials, production data, and unrelated large artifacts before sharing.

Use the [capability reference](../reference/capabilities.mdx) to inspect every entry point. Read the [authority and safety model](../concepts/authority-and-safety.mdx) when the failure concerns model, human, browser, or source authority.
